--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -44,6 +44,18 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+    	<groupId>jakarta.validation</groupId>
+    	<artifactId>jakarta.validation-api</artifactId>
+    	<version>3.0.0</version>
+		</dependency>
+
+		<dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <optional>true</optional>
+    </dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -51,11 +63,7 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-    <groupId>jakarta.validation</groupId>
-    <artifactId>jakarta.validation-api</artifactId>
-    <version>3.0.0</version>
-		</dependency>
+			
 	</dependencies>
 
 	<build>
